--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: go-web-app
+  namespace: go-web-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
