--- a/k8s/go-deploy.yml
+++ b/k8s/go-deploy.yml
@@ -18,7 +18,7 @@ spec:
         app: go-deploy
     spec:
       containers:
-      - image: trahulprabhu38/go-web-app:v1
+      - image: trahulprabhu38/go-web-app:linux
         name: go-web-app
         ports:
         - containerPort: 8080
