added proper service

--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -15,7 +15,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: go-web-app
+                name: go-svc
                 port:
                   number: 80
 
