--- a/k8s/go-svc.yml
+++ b/k8s/go-svc.yml
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: go-svc
+    app: go-deploy
   type: NodePort
 status:
   loadBalancer: {}
